src/objects/Loan_Product_Cycle__c.object
<CustomObject>
    <fields>
        <fullName>Cycle_Number__c</fullName>
        <label>Cycle Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Interest_Rate__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Default Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Number_of_Installments__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Default Number of Installments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Overdue_Interest_Rate__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Default Overdue Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee Set</label>
        <referenceTo>Fee_Set__c</referenceTo>
        <relationshipLabel>Loan Product Cycle</relationshipLabel>
        <relationshipName>Loan_Product_Cycle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Product Cycle</relationshipLabel>
        <relationshipName>Loan_Product_Cycle</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_Interest_Rate__c</fullName>
        <label>Max Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount__c</fullName>
        <label>Max Loan Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_Installments__c</fullName>
        <label>Max Number of Installments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Overdue_Interest_Rate__c</fullName>
        <label>Max Overdue Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Gap_Between_Installments__c</fullName>
        <label>Maximum Gap Between Installments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Interest_Rate__c</fullName>
        <label>Min Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Loan_Amount__c</fullName>
        <label>Min Loan Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Number_of_Installments__c</fullName>
        <label>Min Number of Installments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Overdue_Interest_Rate__c</fullName>
        <label>Min Overdue Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Gap_Between_Installments__c</fullName>
        <label>Minimum Gap Between Installments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Installment_Amount__c</fullName>
        <label>Minimum Installment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Product Cycle</label>
    <nameField>
        <displayFormat>LPCID-{00000}</displayFormat>
        <label>Loan Product Cycle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Product Cycle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>